--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "build": "npx tsc",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/app.js\""
+    "dev": "npx tsc --watch",
+    "run": "nodemon -q dist/app.js"
   },
   "dependencies": {
     "concurrently": "^8.2.2",
@@ -16,5 +17,8 @@
     "mongoose": "^8.0.2",
     "morgan": "~1.9.1",
     "nodemon": "^3.0.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21"
   }
 }
