--- a/package.json
+++ b/package.json
@@ -9,18 +9,21 @@
   },
   "dependencies": {
     "concurrently": "^8.2.2",
-    "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "express-session": "^1.17.3",
+    "express-jwt": "^8.4.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.2",
-    "morgan": "~1.9.1",
     "nodemon": "^3.0.1"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.6",
     "@types/express": "^4.17.21",
-    "@types/express-session": "^1.17.10"
+    "@types/express-session": "^1.17.10",
+    "@types/morgan": "^1.9.9",
+    "cookie-parser": "^1.4.6",
+    "morgan": "^1.10.0"
   }
 }
